--- a/src/main/resources/com/example/crimealert/view/login.fxml
+++ b/src/main/resources/com/example/crimealert/view/login.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="463.0" prefWidth="660.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crimealert.controllor.LoginController">
+<AnchorPane id="AnchorPane" prefHeight="463.0" prefWidth="660.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crimealert.controllor.LoginController">
     <stylesheets>
         <URL value="@../login.css" />
     </stylesheets>
@@ -49,7 +49,7 @@
                        <ChoiceBox layoutX="90.0" layoutY="340.0" prefWidth="150.0" value="Select an option">
                            <items>
                                <FXCollections fx:factory="observableArrayList">
-                                   <String fx:value="Select an option" />
+                                   <String fx:value="Select Account Type" />
                                    <String fx:value="Admin" />
                                    <String fx:value="Citizen" />
                                    <String fx:value="Officer" />
@@ -62,7 +62,7 @@
                                   <Font name="Arial Bold" size="32.0" />
                               </font>
                           </Button>
-                          <Button layoutX="65.0" layoutY="420.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="165.0" styleClass="btn-login" text="Login" textFill="#5b5b5b">
+                          <Button layoutX="90.0" layoutY="420.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="141.0" styleClass="btn-login" text="Login" textFill="#5b5b5b">
                               <font>
                                   <Font name="Arial Bold" size="32.0" />
                               </font>
