--- a/src/main/resources/com/example/crimealert/view/SignUp.fxml
+++ b/src/main/resources/com/example/crimealert/view/SignUp.fxml
@@ -1,14 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.crimealert.view.SignUp"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane id="AnchorPane" prefHeight="463.0" prefWidth="660.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crimealert.controllor.SignupController">
 
+    <children>
+        <HBox layoutY="1.0" prefHeight="557.0" prefWidth="860.0">
+            <children>
+                <VBox alignment="CENTER" style="-fx-background-color: #224499;" HBox.hgrow="ALWAYS">
+                    <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../media/loginlogo.png" />
+                            </image>
+                        </ImageView>
+                        <Label text="Crime Alert" textFill="#e8cbe2">
+                            <font>
+                                <Font name="Sakkal Majalla Bold" size="47.0" />
+                            </font>
+                        </Label>
+                    </children>
+                    <opaqueInsets>
+                        <Insets top="-30.0" />
+                    </opaqueInsets>
+                </VBox>
+                <AnchorPane HBox.hgrow="ALWAYS">
+                    <children>
+                        <HBox layoutX="222.0" layoutY="50.0" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <Label text="Sign Up" textFill="#749aae">
+                                    <font>
+                                        <Font name="Comic Sans MS Bold" size="51.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                        </HBox>
+                        <AnchorPane />
+                        <AnchorPane />
+                  <AnchorPane layoutX="66.0" layoutY="406.0">
+                     <children>
+                              <ChoiceBox prefWidth="150.0" value="Select an option">
+                                  <items>
+                                      <FXCollections fx:factory="observableArrayList">
+                                          <String fx:value="Select an option" />
+                                          <String fx:value="Admin" />
+                                          <String fx:value="Citizen" />
+                                          <String fx:value="Officer" />
+                                          <!-- Add more options as needed -->
+                                      </FXCollections>
+                                  </items>
+                              </ChoiceBox>
+                     </children>
+                  </AnchorPane>
+                        <Button layoutX="260.0" layoutY="467.0" mnemonicParsing="false" onMouseClicked="#onRegisterButtonClick" prefHeight="58.0" prefWidth="178.0" styleClass="btn-login" text="Sign Up" textFill="#5b5b5b">
+                            <font>
+                                <Font name="Arial Bold" size="32.0" />
+                            </font>
+                        </Button>
+                        <Button layoutX="66.0" layoutY="467.0" mnemonicParsing="false" onMouseClicked="#onHelloButtonClick" prefHeight="58.0" prefWidth="178.0" styleClass="btn-login" text="Login" textFill="#5b5b5b">
+                            <font>
+                                <Font name="Arial Bold" size="32.0" />
+                            </font>
+                        </Button>
+                        <PasswordField fx:id="passwordField" layoutX="262.0" layoutY="304.0" prefHeight="42.0" prefWidth="178.0" promptText="Password" />
+                        <TextField fx:id="nameField" layoutX="64.0" layoutY="193.0" prefHeight="42.0" prefWidth="177.0" promptText="Name" />
+                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="43.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../media/Preloader.gif" />
+                            </image>
+                        </ImageView>
+                  <TextField fx:id="cnicField" layoutX="63.0" layoutY="248.0" prefHeight="42.0" prefWidth="178.0" promptText="CNIC" />
+                  <TextField fx:id="contactField" layoutX="262.0" layoutY="248.0" prefHeight="42.0" prefWidth="178.0" promptText="Contact #" />
+                  <TextField fx:id="emailField" layoutX="262.0" layoutY="193.0" prefHeight="42.0" prefWidth="178.0" promptText="Email" />
+                  <TextField fx:id="addressField" layoutX="63.0" layoutY="304.0" prefHeight="42.0" prefWidth="178.0" promptText="Address" />
+                  <Text layoutX="66.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Type :">
+                     <font>
+                        <Font name="Arial" size="16.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="267.0" layoutY="392.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gender :">
+                     <font>
+                        <Font name="Arial" size="16.0" />
+                     </font>
+                  </Text>
+                        <AnchorPane layoutX="262.0" layoutY="406.0">
+                            <children>
+                                <ChoiceBox fx:id="genderChoiceBox" prefWidth="150.0"/>
+                            </children>
+                        </AnchorPane>
+                    </children>
+                </AnchorPane>
+            </children>
+        </HBox>
+        <Label fx:id="errorLabel" layoutX="150.0" layoutY="450.0" textFill="red" />
+    </children>
 </AnchorPane>
