--- a/src/main/resources/com/example/crimealert/view/login.fxml
+++ b/src/main/resources/com/example/crimealert/view/login.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" prefHeight="463.0" prefWidth="660.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crimealert.controllor.LoginController">
 
@@ -39,15 +40,15 @@
                 </VBox>
             <AnchorPane HBox.hgrow="ALWAYS">
                <children>
-                        <HBox layoutX="222.0" layoutY="50.0" prefHeight="100.0" prefWidth="200.0">
+                  <AnchorPane layoutX="222.0" layoutY="50.0">
                      <children>
-                                <Label text="Login In" textFill="#749aae">
+                                <Label layoutX="40.0" layoutY="7.0" text="LogIn" textFill="#749aae">
                                     <font>
                                         <Font name="Comic Sans MS" size="51.0" />
                                     </font>
                                 </Label>
                      </children>
-                        </HBox>
+                  </AnchorPane>
                   <AnchorPane />
                   <AnchorPane />
                        <ChoiceBox layoutX="90.0" layoutY="340.0" prefWidth="150.0" value="Select an option">
@@ -77,11 +78,16 @@
                               </font>
                           </PasswordField>
                   <TextField fx:id="emailField" layoutX="91.0" layoutY="193.0" prefHeight="42.0" prefWidth="312.0" promptText="Email" />
-                          <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="43.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                          <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="90.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                               <image>
                                   <Image url="@../media/Preloader.gif" />
                               </image>
                           </ImageView>
+                  <Text layoutX="90.0" layoutY="329.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Type :">
+                     <font>
+                        <Font name="Arial" size="16.0" />
+                     </font>
+                  </Text>
                </children>
             </AnchorPane>
             </children>
