--- a/src/main/resources/com/example/crimealert/view/navigation.fxml
+++ b/src/main/resources/com/example/crimealert/view/navigation.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="495.0" prefWidth="731.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crimealert.controllor.NavigationController">
+<BorderPane prefHeight="495.0" prefWidth="731.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crimealert.controllor.NavigationController">
    <center>
       <AnchorPane prefHeight="666.0" prefWidth="1096.0">
          <children>
-            <StackPane fx:id="contentArea" prefHeight="600.0" prefWidth="586.0" />
+            <StackPane fx:id="contentArea" prefHeight="600.0" prefWidth="586.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Wellcome to Crime Alert">
+                     <font>
+                        <Font name="Arial Bold" size="37.0" />
+                     </font>
+                  </Text>
+               </children></StackPane>
          </children>
       </AnchorPane>
    </center>
