--- a/src/main/resources/com/example/crimealert/view/Citizen/home.fxml
+++ b/src/main/resources/com/example/crimealert/view/Citizen/home.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crimealert.controllor.HomeControllor">
    <children>
-      <Text layoutX="25.0" layoutY="17.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Profile :" underline="true">
+      <Text layoutX="24.0" layoutY="6.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Profile :" underline="true">
          <font>
             <Font name="Arial Bold" size="18.0" />
          </font>
@@ -16,30 +16,36 @@
             <Font name="Arial Bold" size="15.0" />
          </font>
       </Text>
-      <Text layoutX="105.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Text fx:id="name" layoutX="106.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font></Text>
       <Text layoutX="244.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
          <font>
             <Font name="Arial Bold" size="15.0" />
          </font>
       </Text>
-      <Text layoutX="298.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Text fx:id="email" layoutX="302.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" />
       <Text layoutX="53.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CNIC">
          <font>
             <Font name="Arial Bold" size="15.0" />
          </font>
       </Text>
-      <Text layoutX="105.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Text fx:id="cnic" layoutX="106.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font></Text>
       <Text layoutX="247.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address">
          <font>
             <Font name="Arial Bold" size="15.0" />
          </font>
       </Text>
-      <Text layoutX="315.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Text fx:id="address" layoutX="318.0" layoutY="88.0" strokeType="OUTSIDE" strokeWidth="0.0" />
       <Text layoutX="431.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contact">
          <font>
             <Font name="Arial Bold" size="14.0" />
          </font>
       </Text>
-      <Text layoutX="492.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Text fx:id="contact" layoutX="498.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" />
    </children>
 </AnchorPane>
