--- a/src/main/resources/com/example/crimealert/view/Citizen/crimeReport.fxml
+++ b/src/main/resources/com/example/crimealert/view/Citizen/crimeReport.fxml
@@ -8,22 +8,21 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="488.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crimealert.controllor.CrimeReportController">
    <children>
       <TextField fx:id="subjectTextField" layoutX="107.0" layoutY="83.0" prefHeight="26.0" prefWidth="269.0" />
       <Text layoutX="48.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject: " />
       <Text layoutX="60.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Place: " />
       <TextField fx:id="placeTextField" layoutX="107.0" layoutY="138.0" prefHeight="26.0" prefWidth="270.0" />
-      <TextArea fx:id="descriptionTextArea" layoutX="106.0" layoutY="248.0" prefHeight="143.0" prefWidth="270.0" />
+      <TextArea layoutX="106.0" layoutY="248.0" prefHeight="143.0" prefWidth="270.0" />
       <Text layoutX="28.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description:  " />
-      <Button layoutX="191.0" layoutY="431.0" mnemonicParsing="false" text="Submit" />
+      <Button onAction="#handleSubmitButton" layoutX="191.0" layoutY="431.0" mnemonicParsing="false" text="Submit" />
       <Label layoutX="133.0" layoutY="14.0" text="Crime Report Form">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
       <Text layoutX="41.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Evidence:" />
-      <Button onAction="#handleSubmitButton"  layoutX="107.0" layoutY="186.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="92.0" text="Select File" />
+      <Button layoutX="107.0" layoutY="186.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="92.0" text="Select File" />
    </children>
 </AnchorPane>
