--- a/src/main/resources/com/example/crimealert/view/station.fxml
+++ b/src/main/resources/com/example/crimealert/view/station.fxml
@@ -20,7 +20,7 @@
    <top>
       <Pane prefHeight="54.0" prefWidth="1296.0" style="-fx-background-color: #D3D3D3;" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="14.0" layoutY="12.0" prefHeight="17.0" prefWidth="65.0" text="Home">
+            <Label fx:id="pageTitleLabel" layoutX="14.0" layoutY="12.0" prefHeight="30.0" prefWidth="171.0" text="Home">
                <font>
                   <Font size="20.0" />
                </font>
@@ -40,6 +40,8 @@
                   <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="42.0" prefWidth="196.0" style="-fx-background-color: #AAB2BD;" text="Alerts" />
                </children>
             </VBox>
+            <Button fx:id="loginBtn" layoutX="66.0" layoutY="399.0" mnemonicParsing="false" onMouseClicked="#LoginBtnClicked" prefHeight="25.0" prefWidth="67.0" text="LogIn" />
+            <Button fx:id="logoutBtn" layoutX="66.0" layoutY="424.0" mnemonicParsing="false" onMouseClicked="#LogoutBtnClicked" prefHeight="25.0" prefWidth="67.0" text="LogOut" />
          </children>
       </Pane>
    </left>
