--- a/src/main/resources/com/example/crimealert/view/Citizen/crimeReport.fxml
+++ b/src/main/resources/com/example/crimealert/view/Citizen/crimeReport.fxml
@@ -14,9 +14,9 @@
       <Text layoutX="48.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject: " />
       <Text layoutX="60.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Place: " />
       <TextField fx:id="placeTextField" layoutX="107.0" layoutY="138.0" prefHeight="26.0" prefWidth="270.0" />
-      <TextArea layoutX="106.0" layoutY="248.0" prefHeight="143.0" prefWidth="270.0" />
+      <TextArea fx:id="descriptionTextArea" layoutX="106.0" layoutY="248.0" prefHeight="143.0" prefWidth="270.0" />
       <Text layoutX="28.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description:  " />
-      <Button onAction="#handleSubmitButton" layoutX="191.0" layoutY="431.0" mnemonicParsing="false" text="Submit" />
+      <Button layoutX="191.0" layoutY="431.0" mnemonicParsing="false" onAction="#handleSubmitButton" text="Submit" />
       <Label layoutX="133.0" layoutY="14.0" text="Crime Report Form">
          <font>
             <Font size="24.0" />
